--- a/ShopAspBack/appsettings.json
+++ b/ShopAspBack/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server=(local)\\sqlexpress;Database=SuperMarketDB;Trusted_Connection=True;MultipleActiveresultSets=True"
+  }
+
 }
